econd commit test

--- a/src/app/formulaire/formulaire.component.html
+++ b/src/app/formulaire/formulaire.component.html
@@ -1,4 +1,5 @@
 <div class="onglet">
+	<p>Test</p>
 	<img id="logo" src="../../assets/image/logo2.png" alt="logo" title="logo" /><br/>
 	<form (ngSubmit)="creationAdresse()" [formGroup]="formGroupAdr" name="formulaireDeRecherche">
 		<p>Vous voulez rechercher : </p>
